--- a/app/globals.css
+++ b/app/globals.css
@@ -188,18 +188,207 @@ body {
     min-height: 100%;
     height: auto;
     width: 100%;
-}
 
-/* Code and preformatted text styles */
-.tiptap code, .codigo-inline {
-    background-color: #e4d7f7;
-    padding: 0.2em 0.4em;
-    border-radius: 4px;
-    font-family: 'Fira Code', monospace;
-    font-size: 0.95em;
-}
+    /* Code and preformatted text styles */
+    code,
+    .codigo-inline {
+        background-color: #e4d7f7;
+        padding: 0.2em 0.4em;
+        border-radius: 4px;
+        font-family: "Fira Code", monospace;
+        font-size: 0.95em;
+    }
 
-.tiptap a {
-    /* color: var(--brand-primary); */
-    text-decoration: underline;
+    pre,
+    .codigo-bloco {
+        background-color: #7123e7;
+        color: white;
+        padding: 1em;
+        border-radius: 6px;
+        font-family: "Fira Code", monospace;
+        font-size: 0.95em;
+        overflow-x: auto;
+        margin: 1.5rem 0;
+
+        code {
+            background-color: transparent;
+            padding: 0;
+            border-radius: 0;
+            color: inherit;
+            font-size: inherit;
+        }
+    }
+    a {
+        /* color: var(--brand-primary); */
+        text-decoration: underline;
+    }
+
+    blockquote {
+        border-left: 3px solid rgb(185, 185, 185);
+        margin: 1.5rem 0;
+        padding-left: 1rem;
+    }
+
+    blockquote:first-child {
+        margin-top: 0;
+    }
+
+    ul,
+    ol {
+        padding: 0 1rem;
+        margin: 1.25rem 1rem 1.25rem 0.4rem;
+
+        li p {
+            margin-top: 0.25em;
+            margin-bottom: 0.25em;
+        }
+    }
+
+    ul {
+        list-style-type: disc;
+    }
+
+    ol {
+        list-style-type: decimal;
+    }
+
+    ul[data-type="taskList"] {
+        list-style: none;
+        margin-left: 0;
+        padding: 0;
+
+        li {
+            align-items: flex-start;
+            display: flex;
+
+            > label {
+                flex: 0 0 auto;
+                margin-right: 0.5rem;
+                user-select: none;
+            }
+
+            > div {
+                flex: 1 1 auto;
+            }
+        }
+
+        li[data-checked="true"] > div {
+            text-decoration: line-through;
+            opacity: 0.6;
+        }
+
+        input[type="checkbox"] {
+            cursor: pointer;
+        }
+
+        ul[data-type="taskList"] {
+            margin: 0;
+        }
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        line-height: 1.1;
+        margin-top: 2.5rem;
+        text-wrap: pretty;
+    }
+
+    h1,
+    h2 {
+        margin-top: 3.5rem;
+        margin-bottom: 1.5rem;
+    }
+
+    h1 {
+        font-size: 1.4rem;
+    }
+
+    h2 {
+        font-size: 1.2rem;
+    }
+
+    h3 {
+        font-size: 1.1rem;
+    }
+
+    h4,
+    h5,
+    h6 {
+        font-size: 1rem;
+    }
+
+    hr {
+        border: none;
+        border-top: 1px solid rgb(185, 185, 185);
+        cursor: pointer;
+        margin: 2rem 0;
+
+        &.ProseMirror-selectednode {
+            border-top: 1px solid var(--purple);
+        }
+    }
+
+    table {
+        border-collapse: collapse;
+        margin: 0;
+        overflow: hidden;
+        table-layout: fixed;
+        width: 100%;
+
+        td,
+        th {
+            border: 1px solid rgb(202, 202, 202);
+            box-sizing: border-box;
+            min-width: 1em;
+            padding: 6px 8px;
+            position: relative;
+            vertical-align: top;
+
+            > * {
+                margin-bottom: 0;
+            }
+        }
+
+        th {
+            background-color: rgb(185, 185, 185);
+            font-weight: bold;
+            text-align: left;
+        }
+
+        .selectedCell:after {
+            background: rgb(202, 202, 202);
+            content: "";
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            pointer-events: none;
+            position: absolute;
+            z-index: 2;
+        }
+
+        .column-resize-handle {
+            background-color: rgb(112, 35, 231);
+            bottom: -2px;
+            pointer-events: none;
+            position: absolute;
+            right: -2px;
+            top: 0;
+            width: 4px;
+        }
+    }
+
+    .tableWrapper {
+        margin: 1.5rem 0;
+        overflow-x: auto;
+    }
+
+    &.resize-cursor {
+        cursor: ew-resize;
+        cursor: col-resize;
+    }
 }
