--- a/app/globals.css
+++ b/app/globals.css
@@ -189,6 +189,12 @@ body {
     height: auto;
     width: 100%;
 
+    .node-imageBlock.ProseMirror-selectednode {
+        img {
+            outline: 2px solid purple;
+        }
+    }
+
     /* Code and preformatted text styles */
     code,
     .codigo-inline {
